--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "rest_api_basics",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gitdagray/rest_api_basics.git"
+  },
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -16,5 +20,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
